--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.5",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-stripe-elements": "^6.1.2",
     "semantic-ui-react": "^2.0.1",
-    "spinners-react": "^1.0.6"
+    "spinners-react": "^1.0.6",
+    "swiper": "^8.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
